--- a/KlaseeCustomer/KlaseeCustomer.csproj
+++ b/KlaseeCustomer/KlaseeCustomer.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2AAD00B4-696F-448B-BE8C-03EF642FEB17}</ProjectGuid>
+    <ProjectGuid>{F9B0B7A4-787A-4B5C-A481-8257A0FCEC54}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>OOP_Vertiefungsarbeit01</RootNamespace>
-    <AssemblyName>OOP_Vertiefungsarbeit01</AssemblyName>
+    <RootNamespace>KlaseeCustomer</RootNamespace>
+    <AssemblyName>KlaseeCustomer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cubiod.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Zylinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
